--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head><title>Utilen - YouTube Utility Engine</title></head>
 <body>
     <h1>Utilen is Launching Soon</h1>
-    <p>Visit our main tool: <a href="https://www.utilen.com">Utilen 4K Thumbnail Downloader</a></p>
+    <p>Visit our main tool: <a href="https://utilen.blogspot.com">Utilen 4K Thumbnail Downloader</a></p>
 </body>
 </html>
